--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "deep-extend": "0.4.1",
     "expect": "1.20.2",
     "getbase": "^2.8.2",
-    "handlebars": "latest",
+    "handlebars": "^4.0.11",
     "highlight.js": "^9.12.0",
     "ieee754": "^1.1.8",
     "immutable": "^3.x.x",
     "js-yaml": "^3.5.5",
     "lodash": "4.17.2",
+    "marked": "^0.3.19",
     "matcher": "^0.1.2",
     "memoizee": "0.4.1",
     "promise-worker": "^1.1.1",
@@ -90,8 +91,7 @@
     "worker-loader": "^0.7.1",
     "xml": "1.0.1",
     "xml-but-prettier": "^1.0.1",
-    "yaml-js": "0.2.0",
-    "marked": "^0.3.6"
+    "yaml-js": "0.2.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
